<resources>
    <string name="app_name">Conseo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_conseo">Welcome to Conseo</string>
    <string name="login_or_register">Would you like to create a new account or you already have one?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_your_conseo_account">Login to Your Conseo Account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_your_conseo_account">Create Your Conseo Account</string>
    <string name="create_your_password">Create your password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="choose_your_age">Choose your age</string>
    <string name="proceed">Proceed</string>
    <string name="choose_your_gender">Choose your gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_your_profile_picture">Select Your profile picture</string>
    <string name="set_profile_picture_subtitle">Your profile picture will help people recognize you and it will improve trust in your reviews</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="i_m_good_thanks">I\'m good, thanks.</string>
    <string name="i_look_beautiful_proceed">I look beautiful! Proceed</string>
    <string name="error_saving_account">Something went wrong with saving your account. Please try again later!</string>
    <string name="account_saved">Your account is successfully saved!</string>
    <string name="biometrics">Biometrics</string>
    <string name="biometrics_permission">Biometrics permission</string>
    <string name="biometric_authentication_message">Use biometric authentication to login faster and skip writing your email and password every time</string>
    <string name="biometric_authentication_question">Allow biometric authentication?</string>
    <string name="allow">Allow</string>
    <string name="dont_allow">Don\'t allow</string>
    <string name="cancel">Cancel</string>
    <string name="email_and_password">Email and password</string>
    <string name="email_and_password_key">Email and Password key</string>
    <string name="places">Places</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
    <string name="search_for_a_location">Search for a location</string>
    <string name="services">services</string>
    <string name="chats">Chats</string>
    <string name="add_additional_info">Add additional info</string>
    <string name="add">Add</string>
    <string name="enter_name">Enter name</string>
    <string name="add_location">Add Location</string>
    <string name="look_on_map">Look on map</string>
    <string name="click_on_image_gallery">Click on image to choose from gallery</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="confirm_your_location_on_map_if_the_wrong_location_is_shown_search_for_the_right_one">Confirm your location on map. If the wrong location is shown search for the right one</string>
    <string name="write_a_message">Write a message</string>
    <string name="add_review">Add review</string>
    <string name="check_on_map">Check on map</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="post">Post</string>
    <string name="send_message">Send message</string>
    <string name="place_details_fragment">PlaceDetailsFragment</string>
    <string name="add_place_fragment">AddPlaceFragment</string>
    <string name="log_out">Log out</string>
    <string name="change_name">Change Name</string>
    <string name="save_location">Save Location</string>
    <string name="save_distance">save distance</string>
    <string name="geofence_not_available">Geofence not available</string>
    <string name="geofence_too_many_geofences">Too many geofences</string>
    <string name="geofence_too_many_pending_intents">To many pending intents</string>
    <string name="unknown_geofence_error">Unknown geofence error</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_not_added">Geofences not added</string>
    <string name="geofence_entered">Geofence entered</string>
    <string name="geofences_removed">Geofences Removed</string>
    <string name="geofences_not_removed">Geofences not removed</string>
    <string name="notification_channel_description">Youre close to a place</string>
    <string name="content_text">You are close to a location</string>
    <string name="channel_name">Conseo channel</string>
    <string-array name="spinner_dropdown">
        <item>Bars</item>
        <item>Restaurants</item>
        <item>Events</item>
    </string-array>
    <string name="token">tokenPrefs</string>
    <string name="token_key">token_key</string>
    <string name="skip">Skip</string>
    <string name="choose_which_notifications_you_want_to_receive">Choose which notifications you want to receive</string>
    <string name="event_created">Event created</string>
    <string name="bar_created">Bar created</string>
    <string name="restaurant_created">Restaurant created</string>
    <string name="save">save</string>
    <string name="notifications">Notifications</string>
    <string name="distance_km">%d km</string>
    <string name="add_image">Add image</string>
    <string name="please_choose_date_and_time">Please choose date and time</string>
    <string name="choose_type">Choose type</string>
    <string name="place_name">Name: %s</string>
    <string name="date_and_time_s_s">Date and time %s %s</string>
    <string name="info_s">Info: %s</string>
</resources>