<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="settingsViewModel"
            type="com.lukic.conseo.settings.viewmodels.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Dialog_ChooseNotifications_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/choose_which_notifications_you_want_to_receive"
            android:textAlignment="center"
            android:textColor="@color/dark_pink"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/Dialog_ChooseNotifications_EventCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/lato"
            android:text="@string/event_created"
            android:checked="@={settingsViewModel.eventsChecked}"
            android:gravity="start|center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Dialog_ChooseNotifications_Title" />


        <CheckBox
            android:id="@+id/Dialog_ChooseNotifications_RestaurantCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato"
            android:text="@string/restaurant_created"
            android:gravity="start|center"
            android:checked="@={settingsViewModel.restaurantsChecked}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/Dialog_ChooseNotifications_EventCheckbox"
            app:layout_constraintTop_toBottomOf="@id/Dialog_ChooseNotifications_EventCheckbox" />


        <CheckBox
            android:id="@+id/Dialog_ChooseNotifications_BarCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato"
            android:text="@string/bar_created"
            android:gravity="start|center"
            android:checked="@={settingsViewModel.barsChecked}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/Dialog_ChooseNotifications_RestaurantCheckbox"
            app:layout_constraintTop_toBottomOf="@id/Dialog_ChooseNotifications_RestaurantCheckbox" />


        <ImageView
            android:id="@+id/Dialog_ChooseNotifications_Close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            loadImage="@{@drawable/ic_close_24}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/Dialog_ChooseNotifications_SaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_pink"
            android:text="@string/save"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/Dialog_ChooseNotifications_BarCheckbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
