<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.lukic.conseo.loginregister.viewmodels.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginregister.ui.RegisterFragment">

        <TextView
            android:id="@+id/Fragment_Register_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/lato"
            android:text="@string/create_your_conseo_account"
            android:textColor="@color/dark_pink"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Fragment_Register_NameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Register_Title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Fragment_Register_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/lato"
                android:text="@={viewModel.name}"
                android:afterTextChanged="@{() -> viewModel.clearError()}"
                android:hint="@string/enter_your_name"
                app:hintTextColor="@color/dark_pink" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Fragment_Register_EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Register_NameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Fragment_Register_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/lato"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                android:afterTextChanged="@{() -> viewModel.clearError()}"
                android:hint="@string/email"
                app:hintTextColor="@color/dark_pink" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Fragment_Register_PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Register_EmailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Fragment_Register_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:afterTextChanged="@{() -> viewModel.clearError()}"
                android:fontFamily="@font/lato"
                android:hint="@string/create_your_password"
                app:hintTextColor="@color/dark_pink" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Fragment_Register_RepeatLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Register_PasswordLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Fragment_Register_RepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPassword"
                android:text="@={viewModel.repeatPassword}"
                android:afterTextChanged="@{() -> viewModel.clearError()}"
                android:fontFamily="@font/lato"
                android:hint="@string/repeat_your_password"
                app:hintTextColor="@color/dark_pink" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Fragment_Register_AgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:text="@string/choose_your_age"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/Fragment_Register_RepeatLayout"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Register_RepeatLayout" />

        <com.google.android.material.slider.Slider
            android:id="@+id/Fragment_Register_AgeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:value="@{viewModel.age}"
            android:stepSize="1.0"
            android:valueFrom="16.0"
            android:valueTo="100.0"
            app:layout_constraintStart_toStartOf="@id/Fragment_Register_AgeText"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Register_AgeText" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:backgroundTint="@color/light_yellow"
            android:fontFamily="@font/lato"
            android:onClick="@{() -> viewModel.onProceedClicked()}"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/dark_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/Fragment_Register_GenderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Fragment_Register_AgeSlider">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato"
                    android:text="@string/choose_your_gender"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/Fragment_Register_Male"
                        android:layout_weight="3"
                        android:text="@string/male"
                        android:fontFamily="@font/lato"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/Fragment_Register_Female"
                        android:text="@string/female"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>


        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
