<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.text.TextUtils"/>

        <variable
            name="viewModel"
            type="com.lukic.conseo.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.LoginFragment">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_conseo_account"
            android:textColor="@color/dark_pink"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:fontFamily="@font/andika_new_basic"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Login_PasswordLayout"
            app:layout_constraintStart_toStartOf="@id/Fragment_Login_PasswordLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Fragment_Login_EmailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/email"
            android:backgroundTint="@color/purple_primary"
            app:hintTextColor="@color/purple_primary"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.EditText"
            app:layout_constraintBottom_toTopOf="@id/Fragment_Login_Guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:inputType="textEmailAddress"
                android:paddingTop="60dp"
                android:singleLine="true"
                android:onTextChanged="@{() -> viewModel.clearError()}"
                android:textColor="@color/black"
                android:text="@={viewModel.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Fragment_Login_PasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/password"
            android:backgroundTint="@color/purple_primary"
            app:hintTextColor="@color/purple_primary"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.EditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/Fragment_Login_Guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:inputType="textPassword"
                android:paddingTop="60dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:onTextChanged="@{() -> viewModel.clearError()}"
                android:text="@={viewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Fragment_Login_LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/dark_pink"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fingerprint"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toTopOf="@id/Fragment_Login_LoginButton"
            app:layout_constraintEnd_toEndOf="@id/Fragment_Login_LoginButton"
            app:layout_constraintStart_toStartOf="@id/Fragment_Login_LoginButton"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Fragment_Login_Guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
